opLT cos exp radius of convergence

--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -1197,43 +1197,28 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
 %-------------------------------------
 \exbox{
   \opFT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
-    = \frac{1}{\sqrt{2\pi}}\brs{\frac{2\alpha}{\alpha^2+(\beta-\omega)^2}}
+    = \frac{1}{\sqrt{2\pi}}\brs{\frac{2\alpha}{(\omega-\beta)^2 + \alpha^2}}
+    = \frac{1}{\sqrt{2\pi}}
+       \brs{\frac{2\alpha}
+           {\omega^2 -2\beta\omega + (\alpha^2 + \beta^2)}}
  }
 \end{example}
 \begin{proof}
 \begin{align*}
-  \sqrt{2\pi}\opFT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
-    &\eqd \sqrt{2\pi}\brs{\frac{1}{\sqrt{2\pi}}}\int_{-\infty}^{\infty} \cos(\beta x)e^{-\alpha\abs{x}} e^{-i\omega x}\dx
+  \opFT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
+    &\eqd \frac{1}{\sqrt{2\pi}}\brlr{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}}_{s=i\omega}
     && \text{by definition Fourier Transform}
     && \text{\xref{def:opFT}}
-  \\&= \int_{-\infty}^{\infty} \brs{\frac{e^{i\beta x}+e^{-i\beta x}}{2}} e^{-\alpha\abs{x}} e^{-i\omega x}\dx
-    &&  \text{by Euler's identity}
-  \\&= \frac{1}{2}\int_{-\infty}^{\infty} \brs{e^{-\alpha\abs{x}+i\beta x-i\omega x}+e^{-\alpha\abs{x}-i\beta x-i\omega x}} \dx
-  \\&= \mathrlap{
-       \frac{1}{2}\int_{-\infty}^{0} \brs{e^{ \alpha x +i\beta x-i\omega x}+e^{ \alpha x -i\beta x-i\omega x}} \dx
-     + \frac{1}{2}\int_{0}^{\infty}  \brs{e^{-\alpha x +i\beta x-i\omega x}+e^{-\alpha x -i\beta x-i\omega x}} \dx
-       }
-  \\&= \mathrlap{
-       \frac{1}{2} \brs{\frac{e^{ \alpha x +i(\beta-\omega)x}}{ \alpha +i(\beta-\omega)} + \frac{e^{ \alpha x -i(\beta-\omega)x}}{ \alpha -i(\beta-\omega}}_{-\infty}^{0}
-     + \frac{1}{2} \brs{\frac{e^{-\alpha x +i(\beta-\omega)x}}{-\alpha +i(\beta-\omega)} + \frac{e^{-\alpha x -i(\beta-\omega)x}}{-\alpha -i(\beta-\omega}}_{0}^{\infty}
-       }
-   %&& \text{by Fundamental Theorem of Calculus}
-  \\&= \mathrlap{
-       \frac{1}{2} \brs{\frac{e^{ \alpha x} e^{i(\beta-\omega)x}}{ \alpha +i(\beta-\omega)} + \frac{e^{ \alpha x} e^{-i(\beta-\omega)x}}{ \alpha -i(\beta-\omega)}}_{-\infty}^{0}
-     + \frac{1}{2} \brs{\frac{e^{-\alpha x} e^{i(\beta-\omega)x}}{-\alpha +i(\beta-\omega)} + \frac{e^{-\alpha x} e^{-i(\beta-\omega)x}}{-\alpha -i(\beta-\omega)}}_{0}^{\infty}
-       }
-  \\&= \mathrlap{
-       \frac{1}{2} \brs{\frac{1}{ \alpha +i(\beta-\omega)} + \frac{1}{ \alpha -i(\beta-\omega)} - (0+0)}
-     + \frac{1}{2} \brs{(0+0)-\brp{\frac{1}{-\alpha +i(\beta-\omega)} + \frac{1}{-\alpha -i(\beta-\omega)}}}
-       }
-  \\&= \brs{\frac{1}{ \alpha +i(\beta-\omega)}}
-     + \brs{\frac{1}{ \alpha -i(\beta-\omega)}}
-  \\&= \mathrlap{
-       \brs{\frac{1}{ \alpha +i(\beta-\omega)}} \brs{\frac{ \alpha -i(\beta-\omega)}{ \alpha -i(\beta-\omega)}}
-     + \brs{\frac{1}{ \alpha -i(\beta-\omega)}} \brs{\frac{ \alpha +i(\beta-\omega)}{ \alpha +i(\beta-\omega)}}
-       }
-   %&& \text{(Rationalizing the Denominator)}
-  \\&= \frac{2\alpha}{(\omega - \beta)^2 + \alpha^2}
+  \\&= \frac{1}{\sqrt{2\pi}}\brs{\frac{-2\alpha}{ (s -i\beta)^2 -\alpha^2}}_{s=i\omega}
+    && \text{by \prefp{ex:opLT_cosexp}}
+  \\&= \frac{1}{\sqrt{2\pi}}\brs{\frac{-2\alpha}{ (i\omega -i\beta)^2 -\alpha^2}}
+    && \text{by $s=i\omega\in\intoo{-\alpha}{\alpha}$}
+  \\&= \frac{1}{\sqrt{2\pi}}
+       \brs{\frac{2\alpha}
+                 {(\omega - \beta)^2 + \alpha^2}}
+  \\&= \frac{1}{\sqrt{2\pi}}
+       \brs{\frac{2\alpha}
+                 {\omega^2 -2\beta\omega + (\alpha^2 + \beta^2)}}
 \end{align*}
 \end{proof}
 
