--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -13,13 +13,13 @@
 \begin{definition}
 \label{def:opLT}
 %--------------------------------------
-Let $\spLLRBu$ be the space of all 
+Let $\spLLRBu$ be the space of all
 \structe{Lebesgue square-integrable functions}.\\
 \defboxt{
   The \opd{Laplace Transform} operator $\opLT$ is here defined as
   \\\indentx$\ds
     \brs{\hxs{\opLT} \ff}(\omega)
-    \eqd \fscale 
+    \eqd \fscale
     \int_{x\in\R} \ff(x) e^{-sx} \dx
     \qquad\scy\forall \ff\in\spLLRBu
   $
@@ -27,9 +27,9 @@ Let $\spLLRBu$ be the space of all
   }
 \end{definition}
 
-In \pref{def:opLT}, the scaling factor $\fscale$ is not normally found 
+In \pref{def:opLT}, the scaling factor $\fscale$ is not normally found
 in most definitions of the Laplace Transform.
-However it is included here to make the operator $\opLT$ more directly compatible 
+However it is included here to make the operator $\opLT$ more directly compatible
 with the \ope{Unitary Fourier Transform} operator $\opFT$\ifsxref{harFour}{def:opFT}.
 
 %=======================================
@@ -75,7 +75,7 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 \defbox{\indxs{\conv}\begin{array}{M}
   The \opd{convolution operation} is defined as % $\conv\in\clF{\R^2}{\R}$ is defined as
   \\\indentx$\ds
-    \brs{\ff\conv\fg}(x) 
+    \brs{\ff\conv\fg}(x)
     \eqd \ff(x)\conv \fg(x)
     \eqd \int_{u\in\R} \ff(u)\fg(x-u) \du
     \qquad\scy\forall\ff,\fg\in\spLLRBu
@@ -94,11 +94,11 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\conv$ the convolution operator \xref{def:conv}.
 \thmbox{
 \begin{array}{rcl@{\qquad}C}
-  \mcom{\opLT\brs{\ff(x)\conv\fg(x)}(\omega)}{convolution    in ``time domain"} 
-       &=& \mcom{\sqrt{2\pi}\brs{\opLT\ff}(s)\, \brs{\opLT\fg}(s)}  {multiplication in ``s domain"} 
+  \mcom{\opLT\brs{\ff(x)\conv\fg(x)}(\omega)}{convolution    in ``time domain"}
+       &=& \mcom{\sqrt{2\pi}\brs{\opLT\ff}(s)\, \brs{\opLT\fg}(s)}  {multiplication in ``s domain"}
        & \forall\ff,\fg\in\spLLRBu\\
-  \mcom{\opLT\brs{\ff(x) \fg(x)}(\omega)} {multiplication in ``time domain"} 
-       &=& \mcom{\fscale\brs{\opLT\ff}(s) \conv \brs{\opLT\fg}(s)}{convolution    in ``s domain"} 
+  \mcom{\opLT\brs{\ff(x) \fg(x)}(\omega)} {multiplication in ``time domain"}
+       &=& \mcom{\fscale\brs{\opLT\ff}(s) \conv \brs{\opLT\fg}(s)}{convolution    in ``s domain"}
        & \forall\ff,\fg\in\spLLRBu.
 \end{array}
 }
@@ -108,11 +108,11 @@ and $\conv$ the convolution operator \xref{def:conv}.
    \opLT \brs{\ff(x)\conv\fg(x)}(s)
      &= \opLT \brs{ \int_{u\in\R} \ff(u)\fg(x-u) \du }(s)
      && \text{by definition of $\conv$} &&\text{\xref{def:conv}}
-   \\&=  \int_{u\in\R} \ff(u)\brs{\opLT \fg(x-u)}(s) \du 
-   \\&=  \int_{u\in\R} \ff(u) e^{-su} \; \brs{\opLT\fg(x)}(s) \du 
+   \\&=  \int_{u\in\R} \ff(u)\brs{\opLT \fg(x-u)}(s) \du
+   \\&=  \int_{u\in\R} \ff(u) e^{-su} \; \brs{\opLT\fg(x)}(s) \du
      && \text{by \thme{Fourier shift theorem}} &&\text{\xref{thm:ft_shift}}
    \\&= \sqrt{2\pi}\mcom{\brp{\fscale\int_{u\in\R} \ff(u) e^{-su} \du}}
-             {$\brs{\opLT\ff}(s)$} \; 
+             {$\brs{\opLT\ff}(s)$} \;
         \brs{\opLT\fg}(s)
    \\&= \sqrt{2\pi}\brs{\opLT\ff}(s)\;  \brs{\opLT\fg}(s)
      && \text{by definition of $\opLT$} &&\text{\xref{def:opFT}}
@@ -122,8 +122,8 @@ and $\conv$ the convolution operator \xref{def:conv}.
      && \text{by def. of operator inverse} &&\text{\ifxref{operator}{def:op_inv}}
    \\&= \opLT\brs{\brp{ \fscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) e^{sxv} \dv }\;\fg(x)}(s)
      && \text{by \prefp{thm:opFTi}}
-   \\&= \fscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) \brs{\opLT\brp{e^{sxv} \;\fg(x)}}(s,v) \dv 
-   \\&= \fscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) \brs{\opLT\fg(x)}(s-v) \dv 
+   \\&= \fscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) \brs{\opLT\brp{e^{sxv} \;\fg(x)}}(s,v) \dv
+   \\&= \fscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) \brs{\opLT\fg(x)}(s-v) \dv
      && \text{by \prefp{thm:ft_shift}}
    \\&= \fscalei\brs{\opLT\ff}(s)\conv \brs{\opLT\fg}(s)
      && \text{by definition of $\conv$} &&\text{\xref{def:conv}}
@@ -147,13 +147,13 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  \boxed{\opLT \brs{\ddt \fx(t)}} 
+  \boxed{\opLT \brs{\ddt \fx(t)}}
     &\eqd \int_{t\in\R} \mcom{\brs{\ddt \fx(t)}}{$\dv$} \mcom{e^{-st}}{$u$} \dt
     && \text{by definition of $\opLT$}
   \\&= \brlr{\mcom{e^{-st}}{$u$} \mcom{\fx(t)}{$v$}}_{t=-\infty}^{t=+\infty}
       -\int_{t\in\R} \mcom{\fx(t)}{$v$} \mcom{(-s)e^{-s t}}{$\du$} \dt
     && \text{by \thme{Integration by Parts}}
-  \\&= \cancelto{0}{e^{-s \infty}}\fx(\infty) - e^{s \infty}\cancelto{0}{\fx(-\infty)} 
+  \\&= \cancelto{0}{e^{-s \infty}}\fx(\infty) - e^{s \infty}\cancelto{0}{\fx(-\infty)}
       -(-s)\mcom{\int_{t\in\R} \fx(t) e^{-st} \dt}{\ope{Laplace Transform} of $\fx(t)$}
     && \text{by left hypothesis}
   \\&= \boxed{s \brs{\opLT\fx}(s)}
@@ -191,10 +191,10 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
            \end{array}}
       \\&= \int_{v=-\infty}^{v=+\infty} \int_{u=-\infty}^{u=+\infty} \fx(u) \fh(v)  e^{-s (u+v)} \du \dv
         && \brp{\begin{array}{Mr@{\hspace{2pt}}c@{\hspace{2pt}}l}
-             where      & v&\eqd&t-u\\ 
+             where      & v&\eqd&t-u\\
              $\implies$ & t&=&u+v
            \end{array}}
-      \\&= \brs{\int_{v=-\infty}^{v=+\infty} \fh(v) e^{-s v} \dv} 
+      \\&= \brs{\int_{v=-\infty}^{v=+\infty} \fh(v) e^{-s v} \dv}
             \mcom{\brs{\int_{u=-\infty}^{u=+\infty} \fx(u)   e^{-s u} \du }}
                  {\ope{Laplace Transform} of $\fx(t)$}
       \\&= \brs{\int_{v=0}^{v=\infty} e^{-s v} \dv} \brs{\opLT\fx}(s)
@@ -216,36 +216,42 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 \begin{example}
 \label{ex:opLT_cosexp}
 %-------------------------------------
-Let $\omega\eqd\Imag(s)$ 
+Let $\omega\eqd\Imag(s)$
 (let $\omega$ be the \fncte{imaginary part} of the complex variable $s$).
 \exbox{
   \opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
     = \brbl{\begin{array}{>{\ds}lMD}
-        \frac{2\alpha}{\alpha^2+(\beta-\omega)^2} & for $s=i\omega$ & ($s$ has no real part)\\
-        \infty                                    & otherwise       & (\prope{divergent})
-      \end{array}}
+                \frac{-2\alpha}{[s -( \alpha + i\beta)][s -(-\alpha + i\beta)]}
+              = \frac{-2\alpha}{ (s -i\beta)^2 -\alpha^2}
+              & for $\Real(s)\in\intoo{-\alpha}{\alpha}$
+              &%(radius of convergence)
+              \\
+              \text{$\infty$ (\prope{divergent})}
+              & otherwise
+              &
+            \end{array}}
  }
 \end{example}
 \begin{proof}
 \begin{enumerate}
   \item lemma: \label{ilem:opLT_cosexp}
     \\$\begin{array}{>{\ds}rclM}
-         \lim_{x\to-\infty}\brs{e^{ \alpha x} e^{(-s + i\beta)x} + e^{ \alpha x} e^{(s -i\beta)x}}
-           &=& \brbl{\begin{array}{lMM}
-                 0 & if $s=i\omega$ & (if $\Real(s)=0$)\\
-                 \infty & (diverges) otherwise
+         \lim_{x\to-\infty}\brs{e^{(-s + \alpha + i\beta)x} + e^{(s + \alpha -i\beta)x}}
+           &=& \brbl{\begin{array}{lMD}
+                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+                 \infty & otherwise                                    & (diverges)
                \end{array}}
          \\
          \lim_{x\to\infty}\brs{e^{-\alpha x} e^{(-s + i\beta)x} + e^{-\alpha x} e^{(s -i\beta)x}}
-           &=& \brbl{\begin{array}{lMM}
-                 0 & if $s=i\omega$ & (if $\Real(s)=0$)\\
-                 \infty & (diverges) otherwise
+           &=& \brbl{\begin{array}{lMD}
+                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+                 \infty & otherwise                                    & (diverges)
                \end{array}}
-       \end{array}$ 
+       \end{array}$
 
   \item Main proof:
     \begin{align*}
-      \opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
+      \boxed{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}}
         &\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x}\dx
         && \text{by def. of $\opLT$}&& \text{\xref{def:opLT}}
       \\&= \int_{\R} \brs{\frac{e^{i\beta x}+e^{-i\beta x}}{2}} e^{-\alpha\abs{x}} e^{-s x}\dx
@@ -261,29 +267,24 @@ Let $\omega\eqd\Imag(s)$
            }
        %&& \text{by Fundamental Theorem of Calculus}
       \\&= \mathrlap{
-           \frac{1}{2} \brs{\frac{e^{ \alpha x} e^{(-s + i\beta)x}}{-s +\alpha +i\beta} + \frac{e^{ \alpha x} e^{(s -i\beta)}}{ s +\alpha -i\beta}}_{-\infty}^{0}
-         + \frac{1}{2} \brs{\frac{e^{-\alpha x} e^{(-s + i\beta)x}}{-s -\alpha +i\beta} + \frac{e^{-\alpha x} e^{(s -i\beta)}}{ s -\alpha -i\beta}}_{0}^{\infty}
-           }
-      \\&= \mathrlap{
            \frac{1}{2} \brs{\frac{1}{-s + \alpha +i\beta} + \frac{1}{ s+ \alpha -i\beta} - (0+0)}
          + \frac{1}{2} \brs{(0+0)-\brp{\frac{1}{-s -\alpha +i\beta} + \frac{1}{s -\alpha -i\beta}}}
-           \qquad\text{by \pref{ilem:opLT_cosexp}}}
+           }
+      \\&\indentx\text{by \pref{ilem:opLT_cosexp}}
       \\&= \brs{\frac{-1}{s -( \alpha + i\beta)}}
          + \brs{\frac{1}{ s -(-\alpha + i\beta)}}
       \\&= \frac{-[s -(-\alpha + i\beta)] + [s -( \alpha + i\beta)]}
                 { [s -( \alpha + i\beta)]   [s -(-\alpha + i\beta)]}
+      \\&= \boxed{
+           \frac{-2\alpha}
+                { [s -( \alpha + i\beta)]   [s -(-\alpha + i\beta)]}
+           }
       \\&= \frac{-2\alpha}
                 { s^2 -2i s\beta + ( \alpha + i\beta)(-\alpha + i\beta)}
       \\&= \frac{-2\alpha}
                 { s^2 -2i s\beta + -(\alpha^2-\beta^2)}
-      \\&= \frac{-2\alpha}
-                { (s -i\beta)^2 -\alpha^2}
-      \\&= \frac{ 2\alpha}
-                {- (s -i\beta)^2+ \alpha^2 }
-      \\&= \frac{ 2\alpha}
-                {-(i\omega -i\beta)^2 + \alpha^2}
-      \\&= \frac{ 2\alpha}
-                { (\omega -\beta)^2 + \alpha^2}
+      \\&= \boxed{\frac{-2\alpha}
+                       { (s -i\beta)^2 -\alpha^2}}
     \end{align*}
 \end{enumerate}
 \end{proof}
