--- a/common/harTrig.tex
+++ b/common/harTrig.tex
@@ -1513,10 +1513,13 @@ and the $x$-axis such that
 %---------------------------------------
 \begin{definition}
 \label{def:cosh}
+\footnote{
+  \citerpu{saxelby1920}{225}{https://archive.org/details/courseinpractica00saxerich/page/225}
+  }
 %---------------------------------------
-\defbox{\begin{array}{rc>{\ds}lCD}
-  \cosh(x) &\eqd& \frac{e^{y} + e^{-y} }{2}\\
-  \sinh(x) &\eqd& \frac{e^{y} - e^{-y} }{2}
+\defbox{\begin{array}{rc>{\ds}lC}
+  \cosh(z) &\eqd& \frac{e^{z} + e^{-z} }{2} & \forall z\in\C\\
+  \sinh(z) &\eqd& \frac{e^{z} - e^{-z} }{2} & \forall z\in\C
 \end{array}}
 \end{definition}
 
@@ -1525,7 +1528,7 @@ and the $x$-axis such that
 \footnote{
   \url{https://proofwiki.org/wiki/Cosine_of_Complex_Number},
   \url{https://proofwiki.org/wiki/Sine_of_Complex_Number},
-  \citeru{saxelby1920}{https://archive.org/details/courseinpractica00saxerich/page/416/}
+  \citerppu{saxelby1920}{416}{417}{https://archive.org/details/courseinpractica00saxerich/page/416/}
   }
 %---------------------------------------
 \thmbox{\begin{array}{rclCD}
