opLT opFT cos exp

--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -1226,47 +1226,19 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
 \begin{example}
 \label{ex:sineatau}
 %-------------------------------------
-%what is the Fourier Transform of an odd function (e.g. $\sin(\beta x)$)
-%times an odd function (e.g. $e^{-\alpha\abs{x}}$)?
-%Of course 
 \exbox{
   \opFT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}
-    ?=? 0
+    = 0
  }
 \end{example}
 \begin{proof}
 \begin{align*}
-  \sqrt{2\pi}\opFT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}
-    &\eqd \sqrt{2\pi}\brs{\frac{1}{\sqrt{2\pi}}}\int_{-\infty}^{\infty} \sin(\beta x)e^{-\alpha\abs{x}} e^{-i\omega x}\dx
+  \opFT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}
+    &\eqd \frac{1}{\sqrt{2\pi}}\brlr{\opLT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}}_{s=i\omega}
     && \text{by definition Fourier Transform}
     && \text{\xref{def:opFT}}
-  \\&= \int_{-\infty}^{\infty} \brs{\frac{e^{i\beta x}-e^{-i\beta x}}{2i}} e^{-\alpha\abs{x}} e^{-i\omega x}\dx
-    &&  \text{by Euler's identity}
-  \\&= \frac{1}{2i}\int_{-\infty}^{\infty} \brs{e^{-\alpha\abs{x}+i\beta x-i\omega x}-e^{-\alpha\abs{x}-i\beta x-i\omega x}} \dx
-  \\&= \mathrlap{
-       \frac{1}{2i}\int_{-\infty}^{0} \brs{e^{ \alpha x +i\beta x-i\omega x}-e^{ \alpha x -i\beta x-i\omega x}} \dx
-     + \frac{1}{2i}\int_{0}^{\infty}  \brs{e^{-\alpha x +i\beta x-i\omega x}-e^{-\alpha x -i\beta x-i\omega x}} \dx
-       }
-  \\&= \mathrlap{
-       \frac{1}{2i} \brs{\frac{e^{ \alpha x +ix(\beta-\omega)}}{ \alpha +i(\beta-\omega)} - \frac{e^{ \alpha x -ix(\beta-\omega)}}{ \alpha -i(\beta-\omega}}_{-\infty}^{0}
-     + \frac{1}{2i} \brs{\frac{e^{-\alpha x +ix(\beta-\omega)}}{-\alpha +i(\beta-\omega)} - \frac{e^{-\alpha x -ix(\beta-\omega)}}{-\alpha -i(\beta-\omega}}_{0}^{\infty}
-       }
-   %&& \text{by Fundamental Theorem of Calculus}
-  \\&= \mathrlap{
-       \frac{1}{2i} \brs{\frac{e^{ \alpha x} e^{ix(\beta-\omega)}}{ \alpha +i(\beta-\omega)} - \frac{e^{ \alpha x} e^{-ix(\beta-\omega)}}{ \alpha -i(\beta-\omega)}}_{-\infty}^{0}
-     + \frac{1}{2i} \brs{\frac{e^{-\alpha x} e^{ix(\beta-\omega)}}{-\alpha +i(\beta-\omega)} - \frac{e^{-\alpha x} e^{-ix(\beta-\omega)}}{-\alpha -i(\beta-\omega)}}_{0}^{\infty}
-       }
-  \\&= \mathrlap{
-       \frac{1}{2i} \brs{\frac{1}{ \alpha +i(\beta-\omega)} - \frac{1}{ \alpha -i(\beta-\omega)} - (0-0)}
-     + \frac{1}{2i} \brs{(0-0)-\brp{\frac{1}{-\alpha +i(\beta-\omega)} - \frac{1}{-\alpha -i(\beta-\omega)}}}
-       }
-  \\&?=? \frac{1}{2i} \brs{
-         \frac{1}{ \alpha +i(\beta-\omega)} 
-       - \frac{1}{ \alpha -i(\beta-\omega)}
-       + \frac{1}{ \alpha -i(\beta-\omega)} 
-       - \frac{1}{ \alpha +i(\beta-\omega)}
-       }
   \\&= 0
+    && \text{by \prefp{ex:opLT_cosexp}}
 \end{align*}
 \end{proof}
 
