--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -242,7 +242,7 @@ Let $\omega\eqd\Imag(s)$
                  \infty & otherwise                                    & (diverges)
                \end{array}}
          \\
-         \lim_{x\to\infty}\brs{e^{-\alpha x} e^{(-s + i\beta)x} + e^{-\alpha x} e^{(s -i\beta)x}}
+         \lim_{x\to\infty}\brs{e^{(-s -\alpha + i\beta)x} + e^{(s -\alpha -i\beta)x}}
            &=& \brbl{\begin{array}{lMD}
                  0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
                  \infty & otherwise                                    & (diverges)
@@ -289,6 +289,70 @@ Let $\omega\eqd\Imag(s)$
 \end{enumerate}
 \end{proof}
 
+%-------------------------------------
+\begin{example}
+\label{ex:opLT_sinexp}
+%-------------------------------------
+Let $\omega\eqd\Imag(s)$
+(let $\omega$ be the \fncte{imaginary part} of the complex variable $s$).
+\exbox{
+  \opLT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}
+    = \brbl{\begin{array}{>{\ds}lMD}
+                0 & for $\Real(s)\in\intoo{-\alpha}{\alpha}$
+              &%(radius of convergence)
+              \\
+              \text{$\pm\infty$ (\prope{divergent})}
+              & otherwise
+              &
+            \end{array}}
+ }
+\end{example}
+\begin{proof}
+\begin{enumerate}
+  \item lemma: \label{ilem:opLT_sinexp}
+    \\$\begin{array}{>{\ds}rclM}
+         \lim_{x\to-\infty}\brs{e^{(-s + \alpha + i\beta)x} - e^{(s + \alpha -i\beta)x}}
+           &=& \brbl{\begin{array}{lMD}
+                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+                 \pm\infty & otherwise                                    & (diverges)
+               \end{array}}
+         \\
+         \lim_{x\to\infty}\brs{e^{(-s -\alpha + i\beta)x} - e^{(s -\alpha -i\beta)x}}
+           &=& \brbl{\begin{array}{lMD}
+                 0      & if $v\eqd\Real(s)\in\intoo{-\alpha}{\alpha}$ & (radius of convergence is $\intoo{-\alpha}{\alpha}$)\\
+                 \pm\infty & otherwise                                    & (diverges)
+               \end{array}}
+       \end{array}$
 
+  \item Main proof:
+    \begin{align*}
+      \boxed{\opLT\brs{\sin(\beta x)e^{-\alpha\abs{x}}}}
+        &\eqd \int_{\R} \sin(\beta x)e^{-\alpha\abs{x}} e^{-s x}\dx
+        && \text{by def. of $\opLT$}&& \text{\xref{def:opLT}}
+      \\&= \int_{\R} \brs{\frac{e^{i\beta x}-e^{-i\beta x}}{2i}} e^{-\alpha\abs{x}} e^{-s x}\dx
+        &&  \text{by \thme{Euler's Identity}}&&\text{\xref{thm:eid}}
+      \\&= \frac{1}{2i}\int_{\R} \brs{e^{-\alpha\abs{x}+i\beta x -sx}-e^{-\alpha\abs{x}-i\beta x-sx}} \dx
+      \\&= \mathrlap{
+           \frac{1}{2i}\int_{-\infty}^{0} \brs{e^{(-s + \alpha +i\beta)x} - e^{-s + \alpha -i\beta)x}} \dx
+         + \frac{1}{2i}\int_{0}^{\infty}  \brs{e^{(-s - \alpha +i\beta)x} - e^{-s - \alpha -i\beta)x}} \dx
+           }
+      \\&= \mathrlap{
+           \frac{1}{2i} \brs{\frac{e^{(-s + \alpha +i\beta)x}}{-s +\alpha +i\beta} - \frac{e^{(s +\alpha - i\beta)x}}{s + \alpha -i\beta}}_{-\infty}^{0}
+         + \frac{1}{2i} \brs{\frac{e^{(-s - \alpha +i\beta)x}}{-s -\alpha +i\beta} - \frac{e^{(s -\alpha - i\beta)x}}{s - \alpha -i\beta}}_{0}^{\infty}
+           }
+       %&& \text{by Fundamental Theorem of Calculus}
+      \\&= \mathrlap{
+           \frac{1}{2i} \brs{           \frac{1}{-s + \alpha +i\beta} - \frac{1}{ s+ \alpha -i\beta} - (0+0)}
+         + \frac{1}{2i} \brs{(0+0)-\brp{\frac{1}{-s - \alpha +i\beta} - \frac{1}{ s -\alpha -i\beta}}       }
+           }
+      \\&\indentx\text{by \pref{ilem:opLT_sinexp}}
+      \\&= \mathrlap{
+           \frac{1}{2i} \brs{ \frac{1}{-s + \alpha +i\beta} + \frac{ 1}{ s -\alpha -i\beta}  }
+         + \frac{1}{2i} \brs{\frac{-1}{ s + \alpha -i\beta} + \frac{-1}{-s- \alpha +i\beta}  }
+           }
+      \\&= 0
+    \end{align*}
+\end{enumerate}
+\end{proof}
 
 
